Fixed right-border alignment of modal dialog components (#1124)
(cherry picked from commit 1c68617af212edc785297686a3288b8bf8fd748d)

--- a/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
@@ -51,6 +51,7 @@
   &.grey-header .modal-dialog-header {
       background-color: @admin-bg-light-gray;
       padding: 20px 20px 10px 30px;
+      width: calc(100% - 1px);
   }
 
   .modal-dialog-body {
@@ -58,6 +59,8 @@
     overflow: auto;
     flex: 1;
     max-height: 50vh;
+    width: calc(100% - 1px);
+    box-sizing: border-box;
 
     &.non-scrollable {
       overflow: visible;
